             with dynamic levels on log4perl-devel@lists.sourceforge.net.
             Added to manual page.
   *    (ms) Implemented suggestion by Neil Hooey to check for and report
             undefined message elements before they're assembled in Appender.pm
             and a warning is issued without a proper code location:
             https://github.com/mschilli/log4perl/issues/15

1.37 (2012/05/30)
   *    (ms) [rt.cpan.org #75655] Meir Guttman found the module to make
             Log::Log4perl::Appender::ScreenColoredLevels work on Win32,
             updated docs.
   *    (ms) [rt.cpan.org #76827] UTF-8 encoded configuration files are
             now supported (see Log::Log4perl::Config).
   *    (ms) [rt.cpan.org #77501] Unescaped left brace in regex is deprecated
             with perl 5.17. Times we live in. 

1.36 (2012/02/21)
   *    (ms) [rt.cpan.org #74833] Reini Urban fixed "defined @array" for
             perl 5.16
   *    (ms) [rt.cpan.org #74836] Cope with Carp's questionable decision to
             add a trailing dot to its messages.

1.35 (2012/01/03)
   *    (ms) [rt.cpan.org #73462] Changed logwarn/logcluck/logcarp/error_warn 
             to warn() unconditionally and send the message to log4perl which
             will log it only if the log level conditions are met.
   *    (ms) [rt.cpan.org #73598] Gerda Shank reported test suite problems
             with DBD::CSV-0.26. Bumped up to DBD::CSV-0.33 if installed.

1.34 (2011/11/04)
   *    (ms) InternalDebug now replaces all instances of INTERNAL_DEBUG,
             not just the first one.
   *    (ms) Added test case for get_logger() with a ref() on the actual
             object instead of on a static category. Updated docs.
   *    (ms) %d{e} in PatternLayout now returns epoch seconds
   *    (ms) [RT 72056] Messages blocked by an appender threshold are no
             longer passed on to the L4p::Appender::Buffer as undefined
             entries.

1.33 (2011/05/31)